Support for Social Networking
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2134 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/directory/multilang/DirectoryBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/directory/multilang/DirectoryBundle.properties
@@ -12,7 +12,7 @@ notificationUser.message=Message
 
 #Connexion
 directory.connected=Connect\u00E9 depuis
-
+directory.deconnected=D\u00E9connect\u00E9
 #UserInvitation
 userInvitation.titleprefix=Ajouter
 userInvitation.titleSuffix=\u00E0 mon r\u00E9seau
@@ -22,3 +22,7 @@ userInvitation.action.send=Envoyer
 userInvitation.action.cancel=Annuler
 userInvitation.message=Message
 userInvitation.sendMessage=Envoyer un message
+
+#image profil
+directory.photo=Image
+directory.buttonValid=Valider
