--- a/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle.properties
@@ -23,10 +23,10 @@ invitation.action.confirme=Confirmer
 invitation.action.ignore=Ignorer
 userInvitation.sendMessage=Envoyer un messageo
 
-#MyProfil
+#Profil
 profil.wall=Mur
 profil.infos=Infos
-profil.publications=Publication
+profil.publications=Publications
 profil.events=Ev\u00E8nements
 profil.photos=Photos
 profil.links=Liens
@@ -36,7 +36,36 @@ profil.elements_per_page.EVENT=5
 profil.elements_per_page.PUBLICATION=5
 profil.elements_per_page.PHOTO=5
 
+profil.icon.private.event=Ev\u00E9nement priv\u00E9
+profil.icon.public.event=Ev\u00E9nement public
+profil.icon.new.pub=Publication cr\u00E9\u00E9e
+profil.icon.update.pub=Publication modifi\u00E9e
+profil.icon.staus=Status
+
+profil.relationShip.suffix=a ajout\u00E9
+profil.relationShip.prefix=\u00E0 son r\u00E9seau
+
+profil.status.suffix=a mis \u00E0 jour son statut
+
+profil.getNext=Voir plus
+profil.contacts=Contacts
+profil.commonContacts=Contacts communs
+profil.showAll=Afficher tout
+
+#image profil
+directory.photo=Image
+directory.buttonValid=Valider
+
+newsFeed.newsFeed=Fil d'information
+newsFeed.relations=Relations
+newsFeed.contacts=Mes contacts
+newsFeed.directory=Annuaire
 
 
-
+newsFeed.publication.apdated.true=a modifi\u00E9 la publication
+newsFeed.publication.apdated.false=a publi\u00E9 la publication
+newsFeed.photo.apdated.true=a modifi\u00E9 la photo
+newsFeed.photo.apdated.false=a publi\u00E9 la photo
+newsFeed.event.apdated.false=a publi\u00E9 l'\u00E9v\u00E9nement
+newsFeed.lastevent.apdated.false=a publi\u00E9 l'\u00E9v\u00E9nement
 
