--- a/config-core/src/main/config/properties/com/silverpeas/socialNetwork/settings/SocialNetworkSettings.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/socialNetwork/settings/SocialNetworkSettings.properties
@@ -3,6 +3,9 @@
 PasswordKeyEnable = true
 ELEMENTS_PER_PAGE=4
 
+#le nembre de contacts afficher sur la zone de navigation de page profil
+numberOfContactsTodisplay=4
+
 homePhone=false
 fax=false
 cellularPhone=false
