--- a/war-core/src/main/webapp/WEB-INF/web.xml
+++ b/war-core/src/main/webapp/WEB-INF/web.xml
@@ -479,6 +479,18 @@
         <servlet-name>MyContactJSONServlet</servlet-name>
         <servlet-class>com.silverpeas.socialNetwork.myContactProfil.servlets.ContactJSONServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>NewsFeedRequestRouter</servlet-name>
+        <servlet-class>com.silverpeas.socialNetwork.newsFeed.servlets.NewsFeedRequestRouter</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>NewsFeedJSONServlet</servlet-name>
+        <servlet-class>com.silverpeas.socialNetwork.newsFeed.servlets.NewsFeedJSONServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>DirectoryServlet</servlet-name>
+        <servlet-class>com.silverpeas.directory.servlets.DirectoryServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>AuthenticationServlet</servlet-name>
         <url-pattern>/AuthenticationServlet</url-pattern>
@@ -837,6 +849,18 @@
     <servlet-mapping>
         <servlet-name>MyContactJSONServlet</servlet-name>
         <url-pattern>/RmyContactJSON/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>NewsFeedRequestRouter</servlet-name>
+        <url-pattern>/RnewsFeed/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>NewsFeedJSONServlet</servlet-name>
+        <url-pattern>/RnewsFeedJSONServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DirectoryServlet</servlet-name>
+        <url-pattern>/RdirectoryServlet/*</url-pattern>
     </servlet-mapping>
     <jsp-config>
         <taglib>
