--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     Open Source Software ("FLOSS") applications as described in Silverpeas's
     FLOSS exception.  You should have received a copy of the text describing
     the FLOSS exception, and it is also available here:
-    "http://repository.silverpeas.com/legal/licensing"
+    "http://www.silverpeas.com/legal/licensing"
 
     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
@@ -33,10 +33,17 @@
     <version>14-SNAPSHOT</version>
   </parent>
 
+  <description>
+    Silverpeas is a Collaborative Portal tool usefull to build your Intranet/Extranet.Silverpeas is
+    used to classify and organize the contents in themes independant of the spaces and folders in
+    which they are stored. These contents can be shared through collabotaive tools such as blog, wikis,
+    images gallery and its own Enterprise Content Management tool.
+  </description>
+
   <scm>
     <connection>scm:svn:https://www.silverpeas.org/svn/silverpeas/core/trunk</connection>
     <developerConnection>scm:svn:https://www.silverpeas.org/svn/silverpeas/core/trunk</developerConnection>
-    <url>https://www.silverpeas.org/redmine/repositories/show/silverpeas-core</url>
+    <url>http://www.silverpeas.org/websvn/repos/Silverpeas/list/core/trunk/</url>
   </scm>
 
   <repositories>
@@ -106,10 +113,21 @@
       </plugin>
       <plugin>
         <artifactId>maven-site-plugin</artifactId>
-        <version>2.1</version>
+        <version>2.1.1</version>
       </plugin>
     </plugins>
   </build>
+
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-project-info-reports-plugin</artifactId>
+        <version>2.2</version>
+      </plugin>
+    </plugins>
+  </reporting>
+
 
   <modules>
     <module>test-core</module>
@@ -122,7 +140,7 @@
   </modules>
 
   <properties>
-    <installer_stable_version>5.2.1</installer_stable_version>
+    <installer_stable_version>5.2.2</installer_stable_version>
     <installer_version>${project.version}</installer_version>
   </properties>
 
