--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationManager/settings/notificationManagerSettings.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationManager/settings/notificationManagerSettings.properties
@@ -26,3 +26,8 @@
 multiChannelNotification = false
 
 addReceiversInBody = false
+
+// si true : le nom du groupe est affiché (et non les noms de tous les utilisateurs du groupe)  (value true/false)
+notif.receiver.displayGroup = false
+// actif uniquement si displayGroup = false : Si le groupe contient plus de "displayUser.threshold" utilisateurs alors le nom du groupe est affiché
+notif.receiver.displayUser.threshold = 20
