Simplifying the code
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2174 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/general.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/general.properties
@@ -23,7 +23,7 @@
 #
 ApplicationURL = @SilverPeasURL@
 
-#Nom du workspace (configuré dans repository.xml)
+#Nom du workspace (configur\u00e9 dans repository.xml)
 webdav.workspace=jackrabbit
 #Mapping de la serlet webdav sans '/'
 webdav.respository=repository
@@ -48,7 +48,7 @@ smallLogo=/admin/jsp/icons/logo_silverpeas.gif
 smallLogoSilverBlue=icons/DomainbarSilverblue/logo.gif
 
 # advanced search with PDC
-# doit être à true ou false
+# doit \u00eatre \u00e0 true ou false
 advancedSearchWithPDC = true
 
 # Domain visibility parameter
@@ -64,7 +64,6 @@ pathInstallerJre = http://java.sun.com/update/1.5.0/jinstall-1_5_0_11-windows-i5
 # http server base
 # Needed to override m_sAbsolute value (in front Apache installation case with port forwarding)
 # Example: http://myserver
-httpServerBase = 
+httpServerBase =
 
-
-
+charset=ISO-8859-1
