--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/SilverpeasV5.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/SilverpeasV5.properties
@@ -36,42 +36,42 @@ Frame = com.stratelia.webactiv.util.viewGenerator.html.frame.FrameSilverpeasV5
 NavigationList = com.stratelia.webactiv.util.viewGenerator.html.navigationList.NavigationListSilverpeasV5
 Board = com.stratelia.webactiv.util.viewGenerator.html.board.BoardSilverpeasV5
 
-StyleSheet = 
+StyleSheet =
 
 FrameJSP = MainFrameSilverpeasV5.jsp
 
 # Icones de la topBar
-smallLogo = 
-mailIcon = 
-mapIcon = 
-logIcon = 
-customIcon = 
-helpIcon = 
-clipboardIcon = 
-adminConsol = 
-glossary = 
-personalSpaceIcon = 
-reductIcon = 
-extendIcon = 
-arrowRightIcon = 
-wallPaper = 
-lastResultsIcon = 
-okIcon = 
+smallLogo =
+mailIcon =
+mapIcon =
+logIcon =
+customIcon =
+helpIcon =
+clipboardIcon =
+adminConsol =
+glossary =
+personalSpaceIcon =
+reductIcon =
+extendIcon =
+arrowRightIcon =
+wallPaper =
+lastResultsIcon =
+okIcon =
 FondManager = /silverpeas/jobManagerPeas/jsp/icons/fondmanager.gif
 
 # Visibilit\u00e9 ic\u00f4nes TopBar ("false" pour masquer)
-mailVisible = 
+mailVisible =
 mapVisible =
 logVisible =
 customVisible =
 helpVisible =
-clipboardVisible = 
-glossaryVisible = 
+clipboardVisible =
+glossaryVisible =
 
 # Visibilit\u00e9 composants Espace personnel ("false" pour masquer)
-personnalSpaceVisible =  
-agendaVisible = 
-todoVisible = 
+personnalSpaceVisible =
+agendaVisible =
+todoVisible =
 notificationVisible =
 interestVisible =
 favRequestVisible =
@@ -88,14 +88,14 @@ domainsBarFramesetWidth = 255
 spaceMaxChar = 25
 
 # Default homepage (Ex: http://<host>/page.htm)
-defaultHomepage = 
-persoHomepage = 
+defaultHomepage =
+persoHomepage =
 
 # Id du user utilis\u00e9 pour l'authentification anonyme
 guestId	= 403
 
 # Ids des composants affich\u00e9s dans la Topbar
-# les ids doivent \u00eatre s\u00e9par\u00e9s par des virgules. 
+# les ids doivent \u00eatre s\u00e9par\u00e9s par des virgules.
 # componentsTop = kmelia17,toolbox196,kmelia24,quickinfo101
 componentsTop = toolbox558,webPages690,questionReply364
 
@@ -108,6 +108,10 @@ displayPDCInNav = false
 displayConnectedUsers = true
 
 # Display menu properties
-# displayUserFavoriteSpace allowed values are : DISABLE, BOOKMARKS, ALL  
+# displayUserFavoriteSpace allowed values are : DISABLE, BOOKMARKS, ALL
 displayUserFavoriteSpace = DISABLE
 enableUFSContainsState = false
+
+
+JavaScript.mailinglist=
+StyleSheet.mailinglist=
