update socialNetwork config
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2177 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle.properties
@@ -31,10 +31,14 @@ profil.events=Ev\u00E8nements
 profil.photos=Photos
 profil.links=Liens
 
-profil.elements_per_page.ALL=5
-profil.elements_per_page.EVENT=5
-profil.elements_per_page.PUBLICATION=5
-profil.elements_per_page.PHOTO=5
+profil.elements_per_page.ALL=15
+profil.elements_per_page.EVENT=15
+profil.elements_per_page.PUBLICATION=15
+profil.elements_per_page.PHOTO=15
+
+profil.actions.changePhoto=Changer ma photo
+profil.actions.changeStatus=Changer mon status
+profil.actions.changeInfos=Changer mes infos
 
 profil.icon.private.event=Ev\u00E9nement priv\u00E9
 profil.icon.public.event=Ev\u00E9nement public
