--- a/config-core/src/main/config/properties/com/silverpeas/socialNetwork/settings/SocialNetworkSettings.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/socialNetwork/settings/SocialNetworkSettings.properties
@@ -6,6 +6,8 @@ ELEMENTS_PER_PAGE=4
 #le nembre de contacts afficher sur la zone de navigation de page profil
 numberOfContactsTodisplay=4
 
+profil.elements_per_page=15
+
 homePhone=false
 fax=false
 cellularPhone=false
