Fixing bug #934 : drag and drop of a file on a versionned document containing a file with the same name creates a new version
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2179 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/ejb-core/versioning/src/test/resources/jndi.properties
+++ b/ejb-core/versioning/src/test/resources/jndi.properties
@@ -21,8 +21,5 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-driverClassName=org.postgresql.Driver
-url=jdbc:postgresql://localhost:5432/SilverpeasV5
-username=postgres
-password=postgres
-jndi.name=jdbc/Silverpeas
+java.naming.factory.initial=com.sun.jndi.fscontext.RefFSContextFactory
+java.naming.provider.url=file://${jndi_directory}
