Adding some tests on Node
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2204 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/ejb-core/node/pom.xml
+++ b/ejb-core/node/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>ejb-core</artifactId>
     <version>5.3-SNAPSHOT</version>
   </parent>
-	
+
   <groupId>com.silverpeas.core.ejb-core</groupId>
   <artifactId>node</artifactId>
   <packaging>ejb</packaging>
@@ -25,9 +25,24 @@
       <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.mockrunner</groupId>
+      <artifactId>mockrunner</artifactId>
+      <classifier>jdk1.6-j2ee1.4</classifier>
+    </dependency>
+    <dependency>
+      <groupId>com.mockrunner</groupId>
+      <artifactId>mockrunner-jdbc</artifactId>
+      <classifier>jdk1.6-j2ee1.4</classifier>
+    </dependency>
+    <dependency>
+      <groupId>oro</groupId>
+      <artifactId>oro</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
-  
-   <build>
+
+  <build>
     <testResources>
       <testResource>
         <directory>src/test/resources</directory>
