fixing misconfiguration on domainMSAD.properties
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2222 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/domains/domainMSAD.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/domains/domainMSAD.properties
@@ -107,8 +107,8 @@ groups.DescriptionField=description
 # Available Types : STRING, USERID
 # MapParameter : Name of the LDAP corresponding field
 
-property.Number = 13
-property.ResourceFile = com.stratelia.silverpeas.domains.multilang.domainDLEBundle
+property.Number = 9
+property.ResourceFile = com.stratelia.silverpeas.domains.multilang.domainLDAPBundle
 
 property_1.Name = title
 property_1.Type = STRING
@@ -147,21 +147,3 @@ property_8.MapParameter = mobile
 property_9.Name = address
 property_9.Type = STRING
 property_9.MapParameter = streetAddress
-
-# LDAP base fields
-property_10.Name = login
-property_10.Type = STRING
-property_10.MapParameter = sAMAccountName
-
-property_11.Name = firstName
-property_11.Type = STRING
-property_11.MapParameter = givenName
-
-property_12.Name = lastName
-property_12.Type = STRING
-property_12.MapParameter = sn
-
-property_13.Name = email
-property_13.Type = STRING
-property_13.MapParameter = mail
-
