--- a/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle.properties
@@ -21,7 +21,7 @@ invitation.dateInvitation=Date d'invitation
 invitation.dateInvitationSuffix=\u00E0
 invitation.action.confirme=Confirmer
 invitation.action.ignore=Ignorer
-userInvitation.sendMessage=Envoyer un messageo
+userInvitation.sendMessage=Envoyer un message
 
 #Profil
 profil.wall=Mur
@@ -37,14 +37,14 @@ profil.elements_per_page.PUBLICATION=15
 profil.elements_per_page.PHOTO=15
 
 profil.actions.changePhoto=Changer ma photo
-profil.actions.changeStatus=Changer mon status
+profil.actions.changeStatus=Changer mon statut
 profil.actions.changeInfos=Changer mes infos
 
 profil.icon.private.event=Ev\u00E9nement priv\u00E9
 profil.icon.public.event=Ev\u00E9nement public
 profil.icon.new.pub=Publication cr\u00E9\u00E9e
 profil.icon.update.pub=Publication modifi\u00E9e
-profil.icon.staus=Status
+profil.icon.staus=Statut
 
 profil.relationShip.suffix=a ajout\u00E9
 profil.relationShip.prefix=\u00E0 son r\u00E9seau
@@ -60,7 +60,7 @@ profil.showAll=Afficher tout
 directory.photo=Image
 directory.buttonValid=Valider
 
-newsFeed.newsFeed=Fil d'information
+newsFeed.newsFeed=Fil d'informations
 newsFeed.relations=Relations
 newsFeed.contacts=Mes contacts
 newsFeed.directory=Annuaire
@@ -72,4 +72,3 @@ newsFeed.photo.apdated.true=a modifi\u00E9 la photo
 newsFeed.photo.apdated.false=a publi\u00E9 la photo
 newsFeed.event.apdated.false=a publi\u00E9 l'\u00E9v\u00E9nement
 newsFeed.lastevent.apdated.false=a publi\u00E9 l'\u00E9v\u00E9nement
-
