--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/versioningPeas/multilang/versioning.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/versioningPeas/multilang/versioning.properties
@@ -22,28 +22,28 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 user = Nom
-writer = Rédacteur
+writer = R\u00E9dacteur
 validator = Valideur
 type = Type
 name = Nom
 version = Version
 date = Date
 status = Etat
-creator = Créateur
+creator = Cr\u00E9ateur
 description = Description
 comments = Commentaires
-lockedBy = Réservé par 
+lockedBy = R\u00E9serv\u00E9 par
 at = le
 until = jusqu'au
-waitingValidation = En attente de validation par 
+waitingValidation = En attente de validation par
 free = Libre
 ok = Valider
 close = Fermer
 cancel = Annuler
-alt = Verrouillé par
-checkIn = Libérer
-checkOut = Réserver
-addNewVersion = Créer une nouvelle version
+alt = Verrouill\u00E9 par
+checkIn = Lib\u00E9rer
+checkOut = R\u00E9server
+addNewVersion = Cr\u00E9er une nouvelle version
 newDocumentVersion = Nouvelle version du document
 new_document = Nouveau document
 browse = Parcourir
@@ -57,13 +57,13 @@ pleaseFill = Vous devez remplir tous les champs obligatoires
 
 allVersions = Toutes les versions...
 
-versions.caption   = Versions 
+versions.caption   = Versions
 readerlist.caption = Lecteurs
-writerlist.caption = Rédacteurs
+writerlist.caption = R\u00E9dacteurs
 
-writerlist.ordered  = Ordonné avec approbation
-writerlist.approval = Non ordonné avec approbation
-writerlist.simple   = Non ordonné sans approbation
+writerlist.ordered  = Ordonn\u00E9 avec approbation
+writerlist.approval = Non ordonn\u00E9 avec approbation
+writerlist.simple   = Non ordonn\u00E9 sans approbation
 
 operation.validate = Valider
 operation.refuse   = Refuser
@@ -76,13 +76,13 @@ popupTitle                                              = ___/ Silverpeas&#153; 
 confirmDelete = Voulez vous supprimer ce document ?
 
 readerlist.ToUserPanel = Modifier la liste des lecteurs
-writerlist.ToUserPanel = Modifier la liste des rédacteurs
-versioning.SelectReaders = Sélectionnez les lecteurs de votre fichier
-versioning.SelectWriters = Sélectionnez les rédacteurs de votre fichier
-versioning.SaveList = Sauver la liste des utilisateurs et des groupes comme modèle
-versioning.SaveListWriters = Sauver la liste des utilisateurs comme modèle
-versioning.ListSaved = Modèle de liste sauvé... 
+writerlist.ToUserPanel = Modifier la liste des r\u00E9dacteurs
+versioning.SelectReaders = S\u00E9lectionnez les lecteurs de votre fichier
+versioning.SelectWriters = S\u00E9lectionnez les r\u00E9dacteurs de votre fichier
+versioning.SaveList = Sauver la liste des utilisateurs et des groupes comme mod\u00E8le
+versioning.SaveListWriters = Sauver la liste des utilisateurs comme mod\u00E8le
+versioning.ListSaved = Mod\u00E8le de liste sauv\u00E9...
 
-versioning.warning.checkin.locked=Le fichier est encore ouvert en mode d'édition en ligne.<br/>Veuillez le fermer avant de pouvoir le libérer.
-versioning.warning.checkin.locked.title=Fichier verrouillé
-versioning.warning.checkin.locked.force=Forcer la libération
+versioning.warning.checkin.locked=Le fichier est encore ouvert en mode d'\u00E9dition en ligne.<br/>Veuillez le fermer avant de pouvoir le lib\u00E9rer.
+versioning.warning.checkin.locked.title=Fichier verrouill\u00E9
+versioning.warning.checkin.locked.force=Forcer la lib\u00E9ration
