--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     GNU Affero General Public License for more details.
 
     You should have received a copy of the GNU Affero General Public License
-    along with this program.  If not, see <http://www.gnu.org/licenses/>.
+    along with this program.  If not, see <http://www.gnu.org/licenses />.
 
 -->
 
@@ -41,9 +41,9 @@
   </description>
 
   <scm>
-    <connection>scm:svn:https://www.silverpeas.org/svn/silverpeas/core/trunk</connection>
-    <developerConnection>scm:svn:https://www.silverpeas.org/svn/silverpeas/core/trunk</developerConnection>
-    <url>http://www.silverpeas.org/websvn/repos/Silverpeas/list/core/trunk/</url>
+    <connection>scm:svn:https://www.silverpeas.org/svn/silverpeas/core/tags/core-5.3</connection>
+    <developerConnection>scm:svn:https://www.silverpeas.org/svn/silverpeas/core/tags/core-5.3</developerConnection>
+    <url>http://www.silverpeas.org/websvn/repos/Silverpeas/list/core/tags/core-5.3</url>
   </scm>
 
   <repositories>
@@ -63,7 +63,7 @@
 
   <groupId>com.silverpeas</groupId>
   <artifactId>core</artifactId>
-  <version>5.3-SNAPSHOT</version>
+  <version>5.3</version>
   <packaging>pom</packaging>
   <name>Silverpeas Core</name>
 
