--- a/war-core/pom.xml
+++ b/war-core/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.silverpeas</groupId>
@@ -116,17 +118,17 @@
       <version>${project.version}</version>
       <scope>provided</scope>
     </dependency>
-	<dependency>
+    <dependency>
       <groupId>com.silverpeas.core.ejb-core</groupId>
       <artifactId>importExport</artifactId>
-	  <version>${project.version}</version>
-	  <scope>provided</scope>
+      <version>${project.version}</version>
+      <scope>provided</scope>
     </dependency>
-     <dependency>
+    <dependency>
       <groupId>org.jasig.cas</groupId>
       <artifactId>cas-client-core</artifactId>
     </dependency>
-	<dependency>
+    <dependency>
       <groupId>com.metaparadigm</groupId>
       <artifactId>json-rpc</artifactId>
       <scope>provided</scope>
@@ -146,7 +148,7 @@
       <groupId>com.sun.portal.portletcontainer</groupId>
       <scope>provided</scope>
     </dependency>
-     <dependency>
+    <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>test-core</artifactId>
       <version>${project.version}</version>
@@ -172,5 +174,45 @@
         <filtering>false</filtering>
       </testResource>
     </testResources>
-  </build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <configuration>
+          <filteringDeploymentDescriptors>true</filteringDeploymentDescriptors>
+          <webResources>
+            <webResource>
+              <directory>${basedir}/src/main/webapp/WEB-INF</directory>
+              <includes>
+                <include>web.xml</include>
+              </includes>
+              <targetPath>WEB-INF</targetPath>
+              <filtering>true</filtering>
+            </webResource>
+          </webResources>
+        </configuration>
+    </plugin>
+  </plugins>
+        <!--    <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo.jspc</groupId>
+            <artifactId>jspc-maven-plugin</artifactId>
+            <version>2.0-alpha-3</version>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>compile</goal>
+                </goals>
+              </execution>
+            </executions>
+            <dependencies>
+              <dependency>
+                <groupId>org.codehaus.mojo.jspc</groupId>
+                <artifactId>jspc-compiler-tomcat6</artifactId>
+                <version>2.0-alpha-3</version>
+              </dependency>
+            </dependencies>
+          </plugin>
+        </plugins>-->
+</build>
 </project>
