Add of a new field type in XML forms: a video one. Add of support of the flowplayer Flash player to play videos; the video has to be encoded in FLV. Replaces some explicits references of Hashtable by Map and Vector by List. The adding of the video field is not complete. Some stuffs are staying along such as the configuration of the video playing and probably some code refactoring (once some given things about file-type fields in XML forms will be more understood).
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2450 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/form/settings/types.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/form/settings/types.properties
@@ -52,6 +52,7 @@ file.implementation = com.silverpeas.form.fieldType.FileField
 file.displayer = com.silverpeas.form.fieldDisplayer.FileFieldDisplayer
 file.displayer.file = com.silverpeas.form.fieldDisplayer.FileFieldDisplayer
 file.displayer.image = com.silverpeas.form.fieldDisplayer.ImageFieldDisplayer
+file.displayer.video = com.silverpeas.form.fieldDisplayer.VideoFieldDisplayer
 
 ldap.implementation = com.silverpeas.form.fieldType.LdapField
 ldap.displayer = com.silverpeas.form.fieldDisplayer.LdapFieldDisplayer
