--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/settings/templateDesignerIcons.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/settings/templateDesignerIcons.properties
@@ -45,4 +45,5 @@ templateDesigner.newFieldURL = /util/icons/bookmark_to_add.gif
 templateDesigner.newFieldDate = /util/icons/agenda_to_add.gif
 templateDesigner.newFieldFile = /util/icons/addFile.gif
 templateDesigner.newFieldImage = /util/icons/addPhoto.gif
+templateDesigner.newFieldImage = /util/icons/addPhoto.gif
 templateDesigner.newFieldUser = /util/icons/user_to_add.gif
