Commenting the maven site configuration that is compatible only with Maven 3
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2487 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,7 @@
           </execution>
         </executions>
       </plugin>
-      <plugin>
+    <!--  <plugin>
         <artifactId>maven-site-plugin</artifactId>
         <version>3.0-beta-3-SNAPSHOT</version>
         <configuration>
@@ -140,7 +140,7 @@
             </plugin>
           </reportPlugins>
         </configuration> 
-      </plugin>
+      </plugin>-->
     </plugins>
   </build>
 
