--- a/lib-core/pom.xml
+++ b/lib-core/pom.xml
@@ -81,6 +81,10 @@
       <artifactId>commons-compress</artifactId>
     </dependency>
     <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+    </dependency>
+    <dependency>
       <groupId>net.sourceforge</groupId>
       <artifactId>cryptolib</artifactId>
     </dependency>
