--- a/config-core/src/main/config/properties/com/silverpeas/form/settings/types.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/form/settings/types.properties
@@ -83,3 +83,8 @@ group.implementation = com.silverpeas.form.fieldType.GroupField
 group.displayer = com.silverpeas.form.fieldDisplayer.GroupFieldDisplayer
 group.displayer.group = com.silverpeas.form.fieldDisplayer.GroupFieldDisplayer
 group.displayer.simpletext = com.silverpeas.form.fieldDisplayer.TextDisplayer
+
+sequence.implementation = com.silverpeas.form.fieldType.SequenceField
+sequence.displayer = com.silverpeas.form.fieldDisplayer.SequenceFieldDisplayer
+sequence.displayer.sequence = com.silverpeas.form.fieldDisplayer.SequenceFieldDisplayer
+sequence.displayer.simpletext = com.silverpeas.form.fieldDisplayer.TextDisplayer
