Adding listener for fileupload to clean up the temp dir periodically
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2547 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/WEB-INF/web.xml
+++ b/war-core/src/main/webapp/WEB-INF/web.xml
@@ -113,6 +113,9 @@
   <listener>
     <listener-class>com.stratelia.webactiv.servlets.SilverListener</listener-class>
   </listener>
+  <listener>
+    <listener-class>org.apache.commons.fileupload.servlet.FileCleanerCleanup</listener-class>
+  </listener>
   <servlet>
     <servlet-name>AuthenticationServlet</servlet-name>
     <servlet-class>com.stratelia.silverpeas.servlets.AuthenticationServlet</servlet-class>
