Fixing bug #970 : LDAP login is working with accentuated chars in password now
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2608 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/authentication/autDomainOpenDS.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/authentication/autDomainOpenDS.properties
@@ -34,7 +34,7 @@ autServersCount=1
 
 autServer0.type=com.stratelia.silverpeas.authentication.AuthenticationLDAP
 autServer0.enabled=true
-autServer0.LDAPHost=silver-fs
+autServer0.LDAPHost=localhost
 autServer0.LDAPPort=1389
 autServer0.LDAPAccessLogin=cn=Directory Manager,cn=Root DNs,cn=config
 autServer0.LDAPAccessPasswd=password
