--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/domains/domainOpenDS.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/domains/domainOpenDS.properties
@@ -25,7 +25,7 @@
 
 # Settings Novell Directory Services
 # ----------------------------------
-database.LDAPHost=silver-fs
+database.LDAPHost=localhost
 database.LDAPImpl=openldap
 database.LDAPPort=1389
 database.LDAPProtocolVer=3
@@ -72,7 +72,7 @@ users.EmailField=mail
 
 # Groups' settings
 # ----------------
-#Depend de l'impl\u00E9mentation
+#Depend de l'impl\u00e9mentation
 groups.ClassName=groupOfUniqueNames
 # Note : the filter MUST be put between parentheses.
 #        there MUSTN'T have dummy parentheses levels ex : (&((Condition1))(Condition2)) will NOT works, (&(Condition1)(Condition2)) will works
