--- a/lib-core/pom.xml
+++ b/lib-core/pom.xml
@@ -230,6 +230,10 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <skipTests>false</skipTests>
+          <systemPropertyVariables>
+            <propertyName>java.awt.headless</propertyName>
+            <propertyValue>true</propertyValue>
+          </systemPropertyVariables>
         </configuration>
       </plugin>
       <plugin>
