Cleaning the code and exporting a valid xml file according to the xsd thus fixing Bug #948
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2625 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/importExport/settings/mapping.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/importExport/settings/mapping.properties
@@ -38,4 +38,4 @@ xsdDefaultSystemId = http://intranoo.oevo.com/websilverpeas/exchange/v5/Silverpe
 
 # URL pointing to XML Schema specification of XML namespace used by import/export
 # This location depends on one parameter which is expected to be the version of the namespace
-xsdSystemId = http://intranoo.oevo.com/websilverpeas/exchange/*/SilverpeasExchange.xsd
+xsdSystemId = http://intranoo.oevo.com/websilverpeas/exchange/v5/SilverpeasExchange.xsd
