Closed Feature #1186 - Correction JUnit Jcrop tests
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2627 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/lib-core/pom.xml
+++ b/lib-core/pom.xml
@@ -230,10 +230,12 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <skipTests>false</skipTests>
-          <systemPropertyVariables>
-            <propertyName>java.awt.headless</propertyName>
-            <propertyValue>true</propertyValue>
-          </systemPropertyVariables>
+          <systemProperties>
+            <property>
+              <name>java.awt.headless</name>
+              <value>true</value>
+            </property>
+          </systemProperties>
         </configuration>
       </plugin>
       <plugin>
