--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/SilverpeasV5.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/SilverpeasV5.properties
@@ -104,6 +104,7 @@ displayComponentIcons = true
 
 displayPDCFrame = true
 displayPDCInNav = false
+displayContextualPDC = true
 
 displayConnectedUsers = true
 
