--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/defaultLookSettings.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/defaultLookSettings.properties
@@ -21,4 +21,5 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-Initial = com.stratelia.webactiv.util.viewGenerator.settings.SilverpeasV5
+Initial = com.stratelia.webactiv.util.viewGenerator.settings.SilverpeasLight
+SilverpeasV5 = com.stratelia.webactiv.util.viewGenerator.settings.SilverpeasV5
