--- a/lib-core/src/test/resources/com/stratelia/silverpeas/notificationManager/settings/notificationManagerSettings.properties
+++ b/lib-core/src/test/resources/com/stratelia/silverpeas/notificationManager/settings/notificationManagerSettings.properties
@@ -23,20 +23,20 @@
 #
 
 #Multi channel notification (value true/false)
-multiChannelNotification = false
+multiChannelNotification = true
 
-# Les canaux de communication \u00e0 activer par d\u00e9faut. Si plusieurs canaux sont r\u00e9f\u00e9renc\u00e9s ici,
+# Les cannaux de communications \u00e0 activer par d\u00e9faut. Si plusieurs cannaux sont r\u00e9f\u00e9renc\u00e9s ici,
 # alors le param\u00e8tre multiChannelNotification doit \u00eatre activ\u00e9 (valeur \u00e0 true), sinon un seul de la
-# liste sera pris en compte. Chaque \u00e9l\u00e9ment de la liste doit \u00eatre s\u00e9par\u00e9 par un espace ; exemple :
+# liste sera pris en compte. Chaque \u00e9lement de la liste doit \u00eatre s\u00e9par\u00e9 par un espace ; exemple :
 # notif.defaultChannels = BASIC_SMTP_MAIL BASIC_SILVERMAIL
-# Les canaux possibles sont:
+# Les cannaux possibles sont:
 # - BASIC_POPUP
 # - BASIC_REMOVE
 # - BASIC_SILVERMAIL
 # - BASIC_SMTP_MAIL
 # - BASIC_SERVER
 # - BASIC_COMMUNICATION_USER
-notif.defaultChannels = BASIC_SMTP_MAIL
+notif.defaultChannels = BASIC_SMTP_MAIL   BASIC_SMTP_MAIL   RDFTGT  BASIC_SERVER FFDE    BASIC_SILVERMAIL
 
 addReceiversInBody = false
 
