--- a/config-core/src/main/config/properties/com/silverpeas/thumbnail/multilang/thumbnailBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/thumbnail/multilang/thumbnailBundle.properties
@@ -23,6 +23,7 @@
 #
 thumbnail.componentName = thumbnail
 
-thumbnail.path = Chemin
-thumbnail.picture = Votre image
-thumbnail.nofile = Merci de sélectionner un fichier
+thumbnail.path = Path
+thumbnail.picture = Select the area to define your thumbnail
+thumbnail.preview = Thumbnail preview
+thumbnail.nofile = Please fill the file path
