Testing the CommentDAO with H2 and JUnit4
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2707 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/ejb-core/comment/pom.xml
+++ b/ejb-core/comment/pom.xml
@@ -25,5 +25,29 @@
       <version>${project.version}</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>1.2.144</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.silverpeas.core</groupId>
+      <artifactId>test-core</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
+  
+  <build>
+    <testResources>
+      <testResource>
+        <directory>src/test/resources</directory>
+        <filtering>true</filtering>
+      </testResource>
+    </testResources>
+    <filters>
+      <filter>src/test/filters/filters.properties</filter>
+    </filters>  
+  </build>
 </project>
