closing feature #1279 Adding two parameters "SpacesExcludedFromGlobalSearch" and "ComponentsExcludedFromGlobalSearch".
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2713 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/settings/pdcPeasSettings.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/settings/pdcPeasSettings.properties
@@ -54,3 +54,6 @@ wordSpellingMinScore=0.5f
 #facet search group filter blacklist (ex : todo,agenda,TreeNode)
 searchengine.facet.component.blacklist = 
 searchengine.facet.max.length = 20
+
+SpacesExcludedFromGlobalSearch = 
+ComponentsExcludedFromGlobalSearch = 
