--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
   <parent>
     <groupId>com.silverpeas</groupId>
     <artifactId>parent</artifactId>
-    <version>14</version>
+    <version>15-SNAPSHOT</version>
   </parent>
 
   <description>
@@ -152,7 +152,6 @@
           <plugin>
             <groupId>com.kalistick.soa</groupId>
             <artifactId>ks-agent</artifactId>
-            <version>2.2.1</version>
             <configuration>
               <configFile>${project.basedir}/src/config/agent_cockpit/kalistick-new.xml</configFile>
               <version>${project.version}-${build.timestamp}</version>
