--- a/test-core/pom.xml
+++ b/test-core/pom.xml
@@ -60,6 +60,11 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
+      <groupId>com.jayway.awaitility</groupId>
+       <artifactId>awaitility</artifactId>
+       <scope>compile</scope>
+    </dependency>
+    <dependency>
       <groupId>postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <scope>runtime</scope>
