Closed Feature #1294 - Add component ScheduleEvent (unactif by default)
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2752 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/peasCore/URLManager.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/peasCore/URLManager.properties
@@ -67,6 +67,7 @@ fileSharing = /RfileSharing/jsp/
 webConnections = /RwebConnections/jsp/
 templateDesigner = /RtemplateDesigner/jsp/
 workflowDesigner = /RworkflowDesigner/jsp/
+scheduleEvent = /Rscheduleevent/jsp/
 
 # For Sogreah only
 specificAuthent = /RspecificAuthent/jsp/
