--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/SilverpeasV5.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/SilverpeasV5.properties
@@ -77,6 +77,7 @@ interestVisible =
 favRequestVisible =
 fileSharingVisible = true
 webconnectionsVisible = true
+scheduleEventVisible=false
 
 # URL aide en ligne
 helpURL = /help_fr/index.html
