closing feature #1285 Replacing last icons...
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2760 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/silverStatisticsPeas/settings/silverStatisticsIcons.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/silverStatisticsPeas/settings/silverStatisticsIcons.properties
@@ -37,7 +37,7 @@ silverStatisticsPeas.icoAccessUserPanelPeas      = /util/icons/user.gif
 silverStatisticsPeas.icoClearGroupUser      	 = /util/icons/delete.gif
 silverStatisticsPeas.icoMonitor                  = /util/icons/monitor.gif
 silverStatisticsPeas.icoKillSession              = /util/icons/delete.gif
-silverStatisticsPeas.icoNotifySession            = /util/icons/test.gif
+silverStatisticsPeas.icoNotifySession            = /util/icons/alert.gif
 silverStatisticsPeas.icoNotifyAll		 = /util/icons/alert.gif
 
 silverStatisticsPeas.boxAngleLeft                = /util/icons/colorPix/angleDtBox.gif
