related to feature #1298, adding many enhancements to users directory.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2770 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/lookSilverpeasV5/multilang/lookBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/lookSilverpeasV5/multilang/lookBundle.properties
@@ -39,6 +39,7 @@ lookSilverpeasV5.glossaire = Glossaire
 lookSilverpeasV5.reductExtend = Réduire / Etirer
 lookSilverpeasV5.backOffice = Administration
 lookSilverpeasV5.home = Accueil
+lookSilverpeasV5.directory = Annuaire
 
 # Connected Users
 lookSilverpeasV5.connectedUser = autre utilisateur connecté
