Feature #1217. Step 4: Add Quartz as a scheduling bakend and set it as the default one for the Silverpeas scheduling API. The private component datawarning is also updated to profit of the new scheduling API (with Quartz as backend).
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2773 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/lib-core/pom.xml
+++ b/lib-core/pom.xml
@@ -212,6 +212,10 @@
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.quartz-scheduler</groupId>
+      <artifactId>quartz</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
