Improving public profile
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2777 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle.properties
@@ -31,6 +31,9 @@ profil.events=Ev\u00E8nements
 profil.photos=Photos
 profil.links=Liens
 
+profil.subnav.display = Afficher
+profil.subnav.identity = Identit\u00E9
+
 profil.elements_per_page.ALL=15
 profil.elements_per_page.EVENT=15
 profil.elements_per_page.PUBLICATION=15
