Partial fix for bug #1291 : Adding code for an optimized call for last publications, looking only in publications since a specified date
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2792 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/ejb-core/publication/pom.xml
+++ b/ejb-core/publication/pom.xml
@@ -14,6 +14,11 @@
 	
   <dependencies>
     <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>node</artifactId>
       <version>${project.parent.version}</version>
@@ -47,6 +52,11 @@
       <groupId>com.silverpeas.core</groupId>
       <artifactId>test-core</artifactId>
       <version>${project.parent.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-all</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
