Adding hamcrest version 1.2
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2793 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/test-core/pom.xml
+++ b/test-core/pom.xml
@@ -19,6 +19,11 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-all</artifactId>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
       <groupId>org.dbunit</groupId>
       <artifactId>dbunit</artifactId>
       <scope>compile</scope>
@@ -61,8 +66,8 @@
     </dependency>
     <dependency>
       <groupId>com.jayway.awaitility</groupId>
-       <artifactId>awaitility</artifactId>
-       <scope>compile</scope>
+      <artifactId>awaitility</artifactId>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>postgresql</groupId>
