Updating parent pom - release preparation
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2798 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
   <parent>
     <groupId>com.silverpeas</groupId>
     <artifactId>parent</artifactId>
-    <version>15-SNAPSHOT</version>
+    <version>15</version>
   </parent>
 
   <description>
