Closing feature #1328. Personalization screens have been merged with "My profile".
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2818 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/peasCore/URLManager.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/peasCore/URLManager.properties
@@ -68,6 +68,7 @@ webConnections = /RwebConnections/jsp/
 templateDesigner = /RtemplateDesigner/jsp/
 workflowDesigner = /RworkflowDesigner/jsp/
 scheduleEvent = /Rscheduleevent/jsp/
+MyProfile = /RMyProfil/jsp/
 
 # For Sogreah only
 specificAuthent = /RspecificAuthent/jsp/
