--- a/test-core/pom.xml
+++ b/test-core/pom.xml
@@ -55,8 +55,7 @@
     <dependency>
       <groupId>com.mockrunner</groupId>
       <artifactId>mockrunner</artifactId>
-      <version>0.4.1</version>
-      <classifier>j2ee1.4-jdk6</classifier>
+      <classifier>jdk1.6-j2ee1.4</classifier>
       <scope>compile</scope>
     </dependency>
     <dependency>
