ajout clé DelUsersOnThreadedSynchro
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2860 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/beans/admin/admin.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/beans/admin/admin.properties
@@ -104,3 +104,5 @@ FallbackUserLogins = false
 
 # To enable profile inheritance between spaces and components
 UseProfileInheritance = true
+
+DelUsersOnThreadedSynchro = 
