[maven-release-plugin] prepare release core-5.4
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2875 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/pom.xml
+++ b/pom.xml
@@ -41,9 +41,9 @@
   </description>
 
   <scm>
-    <connection>scm:svn:https://www.silverpeas.org/svn/silverpeas/core/trunk</connection>
-    <developerConnection>scm:svn:https://www.silverpeas.org/svn/silverpeas/core/trunk</developerConnection>
-    <url>http://www.silverpeas.org/websvn/repos/Silverpeas/list/core/trunk/</url>
+    <connection>scm:svn:https://www.silverpeas.org/svn/silverpeas/core/tags/core-5.4</connection>
+    <developerConnection>scm:svn:https://www.silverpeas.org/svn/silverpeas/core/tags/core-5.4</developerConnection>
+    <url>http://www.silverpeas.org/websvn/repos/Silverpeas/list/core/tags/core-5.4</url>
   </scm>
 
   <repositories>
@@ -71,7 +71,7 @@
 
   <groupId>com.silverpeas</groupId>
   <artifactId>core</artifactId>
-  <version>5.4-SNAPSHOT</version>
+  <version>5.4</version>
   <packaging>pom</packaging>
   <name>Silverpeas Core</name>
 
