Feature #1322     Refactor the Comment component:      - now it provides only one entry point to manage comments: the CommentService      - removes the EJB      - extract the DAO contract into an interface so that any implementation change of the DAO is now possible      - the Comment component's objects life-cycle is now managed by Spring      - the dependencies on this component are also updated as consequency
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2898 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/ejb-core/comment/pom.xml
+++ b/ejb-core/comment/pom.xml
@@ -9,19 +9,13 @@
 	
   <groupId>com.silverpeas.core.ejb-core</groupId>
   <artifactId>comment</artifactId>
-  <packaging>ejb</packaging>
-  <name>EJB Comment</name>
+  <packaging>jar</packaging>
+  <name>Lib Comment</name>
 	
   <dependencies>
     <dependency>
       <groupId>com.silverpeas.core.ejb-core</groupId>
       <artifactId>node</artifactId>
-      <version>${project.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.silverpeas.core.ejb-core</groupId>
-      <artifactId>publication</artifactId>
       <version>${project.version}</version>
       <scope>provided</scope>
     </dependency>
