Using H2 for database test
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2908 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/ejb-core/node/pom.xml
+++ b/ejb-core/node/pom.xml
@@ -26,6 +26,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>com.mockrunner</groupId>
       <artifactId>mockrunner</artifactId>
       <classifier>jdk1.6-j2ee1.4</classifier>
@@ -49,5 +54,8 @@
         <filtering>true</filtering>
       </testResource>
     </testResources>
+    <filters>
+      <filter>src/test/filters/filters.properties</filter>
+    </filters>  
   </build>
 </project>
