--- a/ejb-core/node/src/test/filters/filters.properties
+++ b/ejb-core/node/src/test/filters/filters.properties
@@ -9,7 +9,7 @@
 # As a special exception to the terms and conditions of version 3.0 of
 # the GPL, you may redistribute this Program in connection with Free/Libre
 # Open Source Software ("FLOSS") applications as described in Silverpeas's
-# FLOSS exception.  You should have recieved a copy of the text describing
+# FLOSS exception.  You should have received a copy of the text describing
 # the FLOSS exception, and it is also available here:
 # "http://repository.silverpeas.com/legal/licensing"
 #
@@ -21,5 +21,10 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-java.naming.factory.initial=com.sun.jndi.fscontext.RefFSContextFactory
-java.naming.provider.url=file://${jndi_directory}
+
+jdbc_driver=org.h2.Driver
+jdbc_url=jdbc:h2:mem:node-test;DB_CLOSE_DELAY=-1
+jdbc_login=sa
+jdbc_password=
+
+jndi_directory=${basedir}/target/jndi
