--- a/ejb-core/node/src/test/resources/jdbc.properties
+++ b/ejb-core/node/src/test/resources/jdbc.properties
@@ -21,8 +21,13 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-driverClassName=org.postgresql.Driver
-url=jdbc:postgresql://localhost:5432/SilverpeasV5
-username=postgres
-password=postgres
-jndi.name=jdbc/Silverpeas
+driverClassName=${jdbc_driver}
+url=${jdbc_url}
+username=${jdbc_login}
+password=${jdbc_password}
+jndi.name=java:comp/env/jdbc/Silverpeas
+
+jdbc.driver=${jdbc_driver}
+jdbc.url=${jdbc_url}
+jdbc.username=${jdbc_login}
+jdbc.password=${jdbc_password}
