--- a/ejb-core/versioning/src/test/filters/filters.properties
+++ b/ejb-core/versioning/src/test/filters/filters.properties
@@ -21,9 +21,9 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-jdbc_driver=org.postgresql.Driver
-jdbc_url=jdbc:postgresql://localhost:5432/SilverpeasV5
-jdbc_login=postgres
-jdbc_password=postgres
+jdbc_driver=org.h2.Driver
+jdbc_url=jdbc:h2:mem:node-test;DB_CLOSE_DELAY=-1
+jdbc_login=sa
+jdbc_password=
 
 jndi_directory=${basedir}/target/jndi
